<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/idRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/identificator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />


        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender" />


        <EditText
            android:id="@+id/birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nationality" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city" />
    </LinearLayout>
</RelativeLayout>
